# insta-creator

./: .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-define-system-architecture-storage-contract-and-project-spec/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/02-bootstrap-package/: 02-01-PLAN.md  02-CONTEXT.md  02-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-implement-the-reusable-content-workflow-skills-for-brief-car/: 03-01-PLAN.md  03-CONTEXT.md  03-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-add-project-specific-spec-loading-and-cron-fed-idea-intake/: 04-01-PLAN.md  04-CONTEXT.md  04-SUMMARY.md  04-VERIFICATION.md
.planning/phases/05-operational-hardening/: 05-01-PLAN.md  05-CONTEXT.md  05-SUMMARY.md  05-VERIFICATION.md  05-hardening-report.json
docs/: bootstrap-package.md  carousel-workflow-contract.md  content-workflow-contract.md  insta-creator-project-spec-contract.md  insta-creator-storage-contract.md  insta-creator-system-spec.md  project-integration.md  project-spec.md  story-workflow-contract.md  visual-template-contract.md
insta_creator_bootstrap/: __init__.py  cli.py  core.py  integration.py  renderer.py  selection_state.py
insta_creator_bootstrap/templates/: planning_project.md  planning_roadmap.md  planning_state.md  project_spec.md  readme.md
schemas/: cards.schema.json
scripts/: phase5_hardening_check.py
tests/: test_active_project_spec.py  test_bootstrap.py  test_integration.py  test_renderer.py
(+8 files in other folders)
