[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "insta-creator"
version = "0.1.0"
description = "Reusable Instagram content creation system and bootstrap package for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Pedro Toniazzo" }
]
license = { text = "MIT" }
keywords = ["instagram", "hermes", "content", "bootstrap", "social-media"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["insta_creator_bootstrap*"]
